# WelbeXApp

./: .dockerignore  .env.example  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  docker-compose.dev.yml  logging_config_dev.json  pyproject.toml  redbeat.RedBeatScheduler
.docker/dev/backend/: Dockerfile  config.ini  entrypoint.sh
.docker/dev/celery_beat/: Dockerfile  entrypoint.sh
.docker/dev/celery_worker/: Dockerfile  entrypoint.sh
.docker/dev/postgresql/: Dockerfile  config.ini
.docker/dev/redis/: config.ini
src/: main.py
src/api/: endpoints.py
src/api/dependencies/: __init__.py  repository.py  session.py
src/api/routes/: __init__.py  cargo.py
src/celery/: tasks.py  transports.py
src/celery/settings/: __init__.py  beat.py  celery.py  conf.py
src/commands/: load_transports.py  load_us_post_codes.py
src/conf/: manager.py
src/conf/settings/: base.py  dev.py  prod.py  staging.py
src/models/db/: __init__.py  cargo.py  location.py  transport.py
src/models/schemas/: __init__.py  base.py  cargo.py  transport.py
src/repository/: base.py  database.py  table.py
src/repository/crud/: base.py  cargo.py  location.py  transport.py
src/repository/migrations/: env.py
src/repository/migrations/versions/: 2023_05_27_0937-0dd0ec5adf80_create_new_table.py
src/requirements/: prod.txt
src/tests/unit_tests/: test_src.py
src/utils/exceptions/http/: exc_400.py  exc_401.py  exc_403.py  exc_404.py
src/utils/formatters/: __init__.py  unit_measure_formatter.py
src/utils/messages/exceptions/http/: exc_details.py
